--- a/src/App.scss
+++ b/src/App.scss
@@ -43,10 +43,32 @@
         }
       }
     }
+    &:hover{
+      cursor: pointer;
+    }
     .row-item {
       margin-bottom: 10px;
     }
   } 
 } 
+.panel {
+  background: white;
+  height: 100vh;
+  width: 50vw !important;
+  padding: 10px;
+  .panel-content{  
+    background: white;
+    height: 100vh;
+    width: 50vw;
+    .product-img{
+      width: 100%;
+    }
+  }
+  .fa-times:before {
+    content: "X";
+  }
 }
-
+}
+.capitalize {
+  text-transform: capitalize;
+}
