--- a/src/App.scss
+++ b/src/App.scss
@@ -1,56 +1,71 @@
 .App {
   text-align: center;
   padding: 20px;
-  .row{
-    margin: 0px auto;
-  .row-margin {
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 100%;
-    .product-card {
-      width: 200px !important;
-      .image-container {
-        background: transparent;
-        border-radius: 10px;
-        width: 100%;
-        height: 300px;
-        line-height: normal;
-        border: 1px solid #ddd;
-        padding: 5px;
-        .product-img {
+  .card-body{
+    
+    .card-header{
+      background: #da8e8e;
+    }
+    .card-body{
+      background: #FFFEF2;
+    }
+    .row{
+      margin: 0px auto;
+    .row-margin {
+      margin-top: 10px;
+      margin-bottom: 15px;
+      width: 100%;
+      .product-card {
+        width: 200px !important;
+        .image-container {
+          background: #fff;
+          border-radius: 10px;
           width: 100%;
-          height: 200px;
-          object-fit: fill;
-          object-position: center center;
-          border-radius: 10px 10px 0 0;
-          margin-top: 20px;
-        }
-        .card-details {
-          padding: 5px 10px;
-          border-top: #888 1px solid;
-          white-space: nowrap;
-          width: 100%;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          .card-desc {
+          height: 300px;
+          line-height: normal;
+          border: 1px solid #ddd;
+          padding: 5px;
+          .product-img {
+            width: 100%;
+            height: 200px;
+            object-fit: fill;
+            object-position: center center;
+            border-radius: 10px 10px 0 0;
+            margin-top: 20px;
+          }
+          .card-details {
+            padding: 5px 10px;
+            border-top: #888 1px solid;
             white-space: nowrap;
             width: 100%;
             overflow: hidden;
             text-overflow: ellipsis;
-            color: #888888;
-            font-size: 14px;
+            .card-desc {
+              white-space: nowrap;
+              width: 100%;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              color: #888888;
+              font-size: 14px;
+            }
           }
         }
       }
-    }
-    &:hover{
-      cursor: pointer;
-    }
-    .row-item {
-      margin-bottom: 10px;
-    }
+      &:hover{
+        cursor: pointer;
+      }
+      .row-item {
+        margin-bottom: 10px;
+      }
+    } 
   } 
-} 
+}
+.card-header{
+  background: #333;
+  .cat-name{
+  color: #fff;
+  }
+}
 .panel {
   background: white;
   height: 100vh;
@@ -59,7 +74,6 @@
   .panel-content{  
     background: white;
     height: 100vh;
-    width: 50vw;
     .product-img{
       width: 100%;
     }
